--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
-  "type": "module"
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/NachoR9/Pizza-Theory/issues"
   },
-  "homepage": "https://github.com/NachoR9/Pizza-Theory#readme"
+  "homepage": "https://github.com/NachoR9/Pizza-Theory#readme",
+  "dependencies": {
+    "prompt-sync": "^4.2.0"
+  }
 }
